--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "next": "^10.0.0",
+    "next-on-netlify": "^2.8.7",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   }
